chore(dep): bump FastAudioProcess dependency to 0.1.4